changed title etc and added some images

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -5,13 +5,17 @@
 $kaldi-red: #D64000
 $kaldi-red-invert: #fff
 
-$primary: $kaldi-red
+
+$primary: #311b92
 $primary-invert: $kaldi-red-invert
-$body-color: #333
+$body-color: #fef9e7
 $black: #2b2523
+$navbar-background-color: $primary
+
 
 .navbar .navbar-menu
   box-shadow:none !important
+
 
 .content .taglist
   list-style: none
