--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -7,14 +7,13 @@ $kaldi-red-invert: #fff
 
 
 $primary: #311b92
-$primary-invert: $kaldi-red-invert
-$body-color: #fef9e7
+$primary-invert: #fef9e7
+$body-background-color: $primary-invert
+$body-color: #363636
 $black: #2b2523
 $navbar-background-color: $primary
+$card-background-color: #fff9c4
 
-
-.navbar .navbar-menu
-  box-shadow:none !important
 
 
 .content .taglist
